--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "wanakana": "^5.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
